--- a/public/markup/events.html
+++ b/public/markup/events.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/topnav.css">
     <link rel="stylesheet" href="./styles/events.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/local161banner.css">
     <link rel="stylesheet" href="./styles/imagery.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,600" rel="stylesheet">
@@ -79,6 +80,13 @@
 
     </div>
 
+    <!-- Local 161 Banner -->
+    <div id="local161-banner">
+      <div id="local161-banner-text-wrapper">
+        <div class="local161-banner-text">Local 161 | Join the Ranks</div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <div id="footer">
       <div class="footer-box" id="footer-box-1">
@@ -86,7 +94,6 @@
         <p class="footer-text">Public Works is an arts and music community center located in the heart of San Francisco's Mission District.</p>
         <p class="footer-text">We work with our SF neighbors to create impactful opportunities for the public to engage with art.</p>
         <p class="footer-text" id="footer-address">161 Erie St<br>San Francisco, CA 94103</p>
-        <p id="copyright">PW &copy 2018</p>
       </div>
       <div class="footer-box" id="footer-box-2">
         <h5 class="footer-title">Information</h5>
@@ -94,10 +101,7 @@
         <h6 class="footer-link">FAQ</h6>
         <h6 class="footer-link">Local 161</h6>
         <h6 class="footer-link">Booking</h6>
-        <a class="footer-link" href="./rentals">
-          <h6>Rentals</h6>
-        </a>
-        <p id="by">Site by 13lackCloud Web Apps</p>
+        <h6 class="footer-link">Rentals</h6>
       </div>
       <div class="footer-box" id="footer-box-3">
         <h5 class="footer-title">Connect with us</h5>
@@ -109,6 +113,10 @@
         </div>
         <h5 class="footer-title">Join the ranks</h5>
         <input id="footer-email-box" type="text">
+      </div>
+      <div id="footer-byline">
+        <p id="copyright">&copy 2018</p>
+        <p id="by">Developed by Jonathan Crawford</p>
       </div>
     </div>
 
