--- a/public/markup/index.html
+++ b/public/markup/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./styles/master.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/topnav.css">
+    <link rel="stylesheet" href="./styles/local161logo.css">
+    <link rel="stylesheet" href="./styles/local161banner.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/imagery.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
@@ -69,6 +71,26 @@
 
     <!-- Body -->
     <div id="body"></div>
+
+    <!-- Logo -->
+    <div id="logo-content">
+      <div id="central-container">
+        <div id="local-161-logo">
+          <h1 id="local">Local</h1>
+          <h1 id="number">161</h1>
+        </div>
+        <img class="stamp" src="./images/white_stamp.png" alt="white_stamp.png">
+        <h2 id="local-161-tagline">The Official Community</h2>
+      </div>
+      <button class="action-button">Join the ranks</button>
+    </div>
+
+    <!-- Local 161 Banner -->
+    <div id="local161-banner">
+      <div id="local161-banner-text-wrapper">
+        <div class="local161-banner-text">Local 161 | Join the Ranks</div>
+      </div>
+    </div>
 
     <!-- Footer -->
     <div id="footer">
