--- a/public/markup/local161.html
+++ b/public/markup/local161.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/master.css">
   <link rel="stylesheet" href="styles/topnav.css">
   <link rel="stylesheet" href="styles/local161.css">
+  <link rel="stylesheet" href="styles/local161logo.css">
   <link rel="stylesheet" href="styles/dividers.css">
   <link rel="stylesheet" href="styles/imagery.css">
   <link rel="stylesheet" href="styles/footer.css">
@@ -71,7 +72,7 @@
   <!-- Body -->
   <div id="body">
 
-    <!-- Logo -->
+    <!-- Local 161: The Official Community -->
     <div class="divider" id="logo">
       <div id="logo-content">
         <div id="central-container">
@@ -84,33 +85,50 @@
         </div>
       </div>
       <img class="down-arrow-button" src="./images/double_down_arrow.svg" alt="double_down_arrow.svg">
+      <!-- <img class="divider-image" src="./images/bg25.jpg" alt="bg25.jpg"> -->
     </div>
 
-    <!-- Intro -->
-    <div class="divider" id="intro">
+    <!-- We Are -->
+    <div class="divider" id="who-we-are">
       <img class="up-arrow-button" src="./images/double_up_arrow.svg" alt="double_up_arrow.svg">
-      <div class="text" id="intro-text">
-        <h1>Who We Are:</h1>
-        <p>Public Works is a rich community of artists, promoters, explorers, experience-creators, music-lovers and party goers, all working towards the common goal of building a better San Francisco through engagement in the arts.</p>
-        <h1>What We Do:</h1>
-        <p>We have the honor of being a prime destination for exceptional artistic talent, made available to the public.</p>
-        <h1>Local 161:</h1>
-        <p>Our Local 161 Newsletter is your portal into a new and enriching world of artistic engagement.
-        By subscribing, you get early access to shows, discounts and exclusive offers on swag, and other special content made with love just for you by the Public Works team.</p>
+      <div class="text" id="who-we-are-text">
+        <h1>We Are</h1>
       </div>
       <img class="down-arrow-button" src="./images/double_down_arrow.svg" alt="double_down_arrow.svg">
+      <!-- <img class="divider-image" src="./images/bg26.jpg" alt="bg26.jpg"> -->
     </div>
 
-    <!-- Call to Action -->
+    <!-- What We Do -->
+    <div class="divider" id="what-we-do">
+      <img class="up-arrow-button" src="./images/double_up_arrow.svg" alt="double_up_arrow.svg">
+      <div class="text">
+        <h1>Our Vision</h1>
+      </div>
+      <img class="down-arrow-button" src="./images/double_down_arrow.svg" alt="double_down_arrow.svg">
+      <!-- <img class="divider-image" src="./images/bg27.jpg" alt="bg27.png"> -->
+    </div>
+
+    <!-- Local161 -->
+    <div class="divider" id="newsletter">
+      <img class="up-arrow-button" src="./images/double_up_arrow.svg" alt="double_up_arrow.svg">
+      <div class="text">
+        <h1>Local 161</h1>
+      </div>
+      <img class="down-arrow-button" src="./images/double_down_arrow.svg" alt="double_down_arrow.svg">
+      <!-- <img class="divider-image" src="./images/bg28.jpg" alt="bg28.jpg"> -->
+    </div>
+
+    <!-- Join the Ranks -->
     <div class="divider" id="call-to-action">
       <img class="up-arrow-button" src="./images/double_up_arrow.svg" alt="double_up_arrow.svg">
-      <div class="text" id="call-to-action-text">
-        <h1>Join the Ranks:</h1>
+      <div class="text">
+        <h1>Join the Ranks</h1>
         <form action="">
           <input id="email-input-box" type="text">
-          <button class="nav-button" id="email-submit-button" type="button">Submit</button>
+          <button class="action-button" id="email-submit-button" type="button">Submit</button>
         </form>
       </div>
+      <!-- <img class="divider-image" src="./images/bg18.jpg" alt="bg18.jpg"> -->
     </div>
 
     <!-- Manhole -->
@@ -125,7 +143,6 @@
       <p class="footer-text">Public Works is an arts and music community center located in the heart of San Francisco's Mission District.</p>
       <p class="footer-text">We work with our SF neighbors to create impactful opportunities for the public to engage with art.</p>
       <p class="footer-text" id="footer-address">161 Erie St<br>San Francisco, CA 94103</p>
-      <p id="copyright">PW &copy 2018</p>
     </div>
     <div class="footer-box" id="footer-box-2">
       <h5 class="footer-title">Information</h5>
@@ -133,10 +150,7 @@
       <h6 class="footer-link">FAQ</h6>
       <h6 class="footer-link">Local 161</h6>
       <h6 class="footer-link">Booking</h6>
-      <a class="footer-link" href="./rentals">
-        <h6>Rentals</h6>
-      </a>
-      <p id="by">Site by 13lackCloud Web Apps</p>
+      <h6 class="footer-link">Rentals</h6>
     </div>
     <div class="footer-box" id="footer-box-3">
       <h5 class="footer-title">Connect with us</h5>
@@ -149,10 +163,11 @@
       <h5 class="footer-title">Join the ranks</h5>
       <input id="footer-email-box" type="text">
     </div>
+    <div id="footer-byline">
+      <p id="copyright">&copy 2018</p>
+      <p id="by">Developed by Jonathan Crawford</p>
+    </div>
   </div>
-
-  <!-- Background Image -->
-  <img class="background-image" src="./images/bg9.jpg" alt="bg16.jpg">
 
   <!-- Grit -->
   <img id="grit" src="./images/grit_5.png" alt="grit_5.png">
