local161 site basic updates

--- a/public/markup/index.html
+++ b/public/markup/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="./styles/master.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/topnav.css">
-    <link rel="stylesheet" href="./styles/local161logo.css">
-    <link rel="stylesheet" href="./styles/local161banner.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/imagery.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
@@ -70,25 +68,17 @@
     </div>
 
     <!-- Body -->
-    <div id="body"></div>
-
-    <!-- Logo -->
-    <div id="logo-content">
-      <div id="central-container">
-        <div id="local-161-logo">
-          <h1 id="local">Local</h1>
-          <h1 id="number">161</h1>
+    <div id="body">
+      <img class="cross-thing" id="cross-thing-top" src="./images/cross-thing.svg" alt="cross-thing.svg">
+      <img class="cross-thing" id="cross-thing-bottom" src="./images/cross-thing.svg" alt="cross-thing.svg">
+      <img class="cross-thing" id="cross-thing-left" src="./images/cross-thing.svg" alt="cross-thing.svg">
+      <img class="cross-thing" id="cross-thing-right" src="./images/cross-thing.svg" alt="cross-thing.svg">
+      <div id="logo-container">
+        <img id="local161-logo" src="./images/local161-logo-subtext.svg" alt="local161-logo-subtext.svg">
+        <div id="shake-container">
+          <button class="action-button" id="action-button-home">Join the ranks</button>
         </div>
-        <img class="stamp" src="./images/white_stamp.png" alt="white_stamp.png">
-        <h2 id="local-161-tagline">The Official Community</h2>
-      </div>
-      <button class="action-button">Join the ranks</button>
-    </div>
-
-    <!-- Local 161 Banner -->
-    <div id="local161-banner">
-      <div id="local161-banner-text-wrapper">
-        <div class="local161-banner-text">Local 161 | Join the Ranks</div>
+        <img id="logo-stamp" src="./images/pw_manhole.png" alt="pw_manhole.png">
       </div>
     </div>
 
@@ -124,9 +114,6 @@
         <p id="by">Developed by Jonathan Crawford</p>
       </div>
     </div>
-
-    <!-- Background Image -->
-    <img src="./images/bg24.jpg" alt="bg24.jpg" class="background-image">
 
     <!-- Grit -->
     <img id="grit" src="./images/grit_5.png" alt="grit_5.png">
